Small QOL changes, code cleanup and added a splashscreen

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,8 +4,9 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/main_holder"
-        android:background="@drawable/ic_rec1">
+        android:id="@+id/homeFragment"
+        android:background="@drawable/ic_rec1"
+        >
 
         <ImageView
             android:id="@+id/weather_logo_tv"
@@ -38,10 +39,9 @@
 
         <ImageView
             android:id="@+id/weather_image_iv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
             android:layout_marginTop="20dp"
-            android:src="@drawable/ic_image_partlycloudy"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/city_name_tv" />
@@ -52,7 +52,6 @@
             android:layout_height="24dp"
             android:fontFamily="@font/averta"
             android:gravity="center"
-            android:text="Sunny"
             android:textColor="#FFFFFF"
             android:textFontWeight="600"
             android:textSize="14sp"
@@ -67,7 +66,6 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
-            android:text="Sunny weather"
             android:textColor="#FFFFFF"
             android:alpha="0.72"
             android:textSize="12sp"
@@ -89,7 +87,6 @@
                 android:layout_width="69dp"
                 android:layout_height="69dp"
                 android:fontFamily="@font/averta"
-                android:text="22"
                 android:textAlignment="textEnd"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600"
@@ -128,7 +125,6 @@
                 android:drawablePadding="2dp"
                 android:fontFamily="@font/averta"
                 android:gravity="center"
-                android:text="24°"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600"
                 android:textSize="14sp" />
@@ -143,7 +139,6 @@
                 android:drawablePadding="2dp"
                 android:fontFamily="@font/averta"
                 android:gravity="center"
-                android:text="18°"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600"
                 android:textSize="14sp" />
@@ -169,7 +164,6 @@
                 android:layout_height="wrap_content"
                 android:drawableTop="@drawable/ic_frame_1"
                 android:fontFamily="@font/averta"
-                android:text="50%"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600" />
 
@@ -180,7 +174,6 @@
                 android:layout_marginStart="56dp"
                 android:drawableTop="@drawable/ic_frame_2"
                 android:fontFamily="@font/averta"
-                android:text="2m/s"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600" />
 
@@ -191,7 +184,6 @@
                 android:layout_marginStart="47dp"
                 android:drawableTop="@drawable/ic_precipitation_24px"
                 android:fontFamily="@font/averta"
-                android:text="20mm"
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600" />
         </LinearLayout>
