--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,11 +2,21 @@
 <layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/homeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/homeFragment"
-        android:background="@drawable/ic_rec1"
-        >
+        android:background="@drawable/ic_rec1">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:backgroundTint="@color/black"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/weather_logo_tv"
@@ -63,13 +73,13 @@
             android:id="@+id/weather_detail_tv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
-            android:textColor="#FFFFFF"
             android:alpha="0.72"
-            android:textSize="12sp"
+            android:textColor="#FFFFFF"
             android:textFontWeight="600"
+            android:textSize="12sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
 
             />
 
@@ -133,8 +143,8 @@
                 android:id="@+id/min_temp_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="24dp"
-                android:layout_weight="1"
                 android:layout_marginStart="6dp"
+                android:layout_weight="1"
                 android:drawableStart="@drawable/ic_color"
                 android:drawablePadding="2dp"
                 android:fontFamily="@font/averta"
@@ -187,6 +197,9 @@
                 android:textColor="#FFFFFF"
                 android:textFontWeight="600" />
         </LinearLayout>
+
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </layout>
