--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,229 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/homeFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/ic_rec1">
 
-        <ProgressBar
-            android:id="@+id/progressBar"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="18dp"
-            android:backgroundTint="@color/black"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:id="@+id/retryConnectionButton"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            android:layout_marginBottom="18dp"
-            android:src="@drawable/retry_icon"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <TextView
-            android:id="@+id/connectionFailed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Connection failed, check your internet connection!"
-            android:textColor="#FF0000"
-            android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/retryConnectionButton" />
-
-        <ImageView
-            android:id="@+id/weather_logo_tv"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_marginTop="44dp"
-            android:paddingTop="21dp"
-            android:paddingBottom="21dp"
-            android:src="@drawable/ic_logo_small"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/city_name_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:fontFamily="@font/averta"
-            android:gravity="center"
-            android:text="Pristina"
-            android:textAlignment="center"
-            android:textColor="#FFFFFF"
-            android:textFontWeight="600"
-            android:textSize="30sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/weather_logo_tv" />
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="18dp"
+                android:backgroundTint="@color/black"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-
-        <ImageView
-            android:id="@+id/weather_image_iv"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_marginTop="20dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/city_name_tv" />
-
-        <TextView
-            android:id="@+id/weather_description_tv"
-            android:layout_width="147dp"
-            android:layout_height="24dp"
-            android:fontFamily="@font/averta"
-            android:gravity="center"
-            android:textColor="#FFFFFF"
-            android:textFontWeight="600"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/weather_image_iv" />
-
-        <TextView
-            android:id="@+id/weather_detail_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:alpha="0.72"
-            android:textColor="#FFFFFF"
-            android:textFontWeight="600"
-            android:textSize="12sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
-
-            />
-
-        <LinearLayout
-            android:id="@+id/relative_layout_temp"
-            android:layout_width="101dp"
-            android:layout_height="69dp"
-            android:layout_marginTop="30dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/weather_detail_tv">
+            <ImageView
+                android:id="@+id/retryConnectionButton"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:layout_marginBottom="18dp"
+                android:src="@drawable/retry_icon"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/temp_tv"
-                android:layout_width="69dp"
+                android:id="@+id/connectionFailed"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Connection failed, check your internet connection!"
+                android:textColor="#FF0000"
+                android:visibility="gone"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/retryConnectionButton" />
+
+            <ImageView
+                android:id="@+id/weather_logo_tv"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_marginTop="44dp"
+                android:paddingTop="21dp"
+                android:paddingBottom="21dp"
+                android:src="@drawable/ic_logo_small"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/city_name_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/averta"
+                android:gravity="center"
+                android:text="Pristina"
+                android:textAlignment="center"
+                android:textColor="#FFFFFF"
+                android:textFontWeight="600"
+                android:textSize="30sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/weather_logo_tv" />
+
+
+            <ImageView
+                android:id="@+id/weather_image_iv"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/city_name_tv" />
+
+            <TextView
+                android:id="@+id/weather_description_tv"
+                android:layout_width="147dp"
+                android:layout_height="24dp"
+                android:fontFamily="@font/averta"
+                android:gravity="center"
+                android:textColor="#FFFFFF"
+                android:textFontWeight="600"
+                android:textSize="14sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/weather_image_iv" />
+
+            <TextView
+                android:id="@+id/weather_detail_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.72"
+                android:textColor="#FFFFFF"
+                android:textFontWeight="600"
+                android:textSize="12sp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/weather_description_tv"
+
+                />
+
+            <LinearLayout
+                android:id="@+id/relative_layout_temp"
+                android:layout_width="101dp"
                 android:layout_height="69dp"
-                android:fontFamily="@font/averta"
-                android:textAlignment="textEnd"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600"
-                android:textSize="64sp" />
+                android:layout_marginTop="30dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/weather_detail_tv">
 
-            <TextView
-                android:id="@+id/celsius_tv"
-                android:layout_width="28dp"
-                android:layout_height="match_parent"
-                android:layout_marginTop="12dp"
-                android:fontFamily="@font/averta"
-                android:text="°C"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600"
-                android:textSize="24sp" />
+                <TextView
+                    android:id="@+id/temp_tv"
+                    android:layout_width="69dp"
+                    android:layout_height="69dp"
+                    android:fontFamily="@font/averta"
+                    android:textAlignment="textEnd"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600"
+                    android:textSize="64sp" />
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/celsius_tv"
+                    android:layout_width="28dp"
+                    android:layout_height="match_parent"
+                    android:layout_marginTop="12dp"
+                    android:fontFamily="@font/averta"
+                    android:text="°C"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600"
+                    android:textSize="24sp" />
 
-        <LinearLayout
-            android:id="@+id/linear_layout_max_min_temp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/relative_layout_temp">
+            </LinearLayout>
 
-            <TextView
-                android:id="@+id/max_temp_tv"
+            <LinearLayout
+                android:id="@+id/linear_layout_max_min_temp"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_weight="1"
-                android:drawableStart="@drawable/ic_color__1_"
-                android:drawablePadding="2dp"
-                android:fontFamily="@font/averta"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600"
-                android:textSize="14sp" />
+                android:orientation="horizontal"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/relative_layout_temp">
 
-            <TextView
-                android:id="@+id/min_temp_tv"
+                <TextView
+                    android:id="@+id/max_temp_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_weight="1"
+                    android:drawableStart="@drawable/ic_color__1_"
+                    android:drawablePadding="2dp"
+                    android:fontFamily="@font/averta"
+                    android:gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600"
+                    android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/min_temp_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="6dp"
+                    android:layout_weight="1"
+                    android:drawableStart="@drawable/ic_color"
+                    android:drawablePadding="2dp"
+                    android:fontFamily="@font/averta"
+                    android:gravity="center"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/linear_layout_wind_humidity_precipitation"
                 android:layout_width="wrap_content"
-                android:layout_height="24dp"
-                android:layout_marginStart="6dp"
-                android:layout_weight="1"
-                android:drawableStart="@drawable/ic_color"
-                android:drawablePadding="2dp"
-                android:fontFamily="@font/averta"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:layout_marginBottom="40dp"
                 android:gravity="center"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600"
-                android:textSize="14sp" />
-        </LinearLayout>
+                android:orientation="horizontal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/linear_layout_max_min_temp">
+
+                <TextView
+                    android:id="@+id/humidity_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableTop="@drawable/ic_frame_1"
+                    android:fontFamily="@font/averta"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600" />
+
+                <TextView
+                    android:id="@+id/wind_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="56dp"
+                    android:drawableTop="@drawable/ic_frame_2"
+                    android:fontFamily="@font/averta"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600" />
+
+                <TextView
+                    android:id="@+id/pressure_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="47dp"
+                    android:drawableTop="@drawable/ic_precipitation_24px"
+                    android:fontFamily="@font/averta"
+                    android:textColor="#FFFFFF"
+                    android:textFontWeight="600" />
+            </LinearLayout>
 
 
-        <LinearLayout
-            android:id="@+id/linear_layout_wind_humidity_precipitation"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="50dp"
-            android:layout_marginBottom="40dp"
-            android:gravity="center"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linear_layout_max_min_temp">
-
-            <TextView
-                android:id="@+id/humidity_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableTop="@drawable/ic_frame_1"
-                android:fontFamily="@font/averta"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600" />
-
-            <TextView
-                android:id="@+id/wind_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="56dp"
-                android:drawableTop="@drawable/ic_frame_2"
-                android:fontFamily="@font/averta"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600" />
-
-            <TextView
-                android:id="@+id/pressure_tv"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="47dp"
-                android:drawableTop="@drawable/ic_precipitation_24px"
-                android:fontFamily="@font/averta"
-                android:textColor="#FFFFFF"
-                android:textFontWeight="600" />
-        </LinearLayout>
-
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 </layout>
